frontend/src/app/testResults/TestResultsList.scss
@import "../../scss/settings/app-settings.scss";

.sr-test-results-list {
  .sr-more-test-results {
    display: flex;
    justify-content: center;
    margin: 1em 0;
  }

  .sr-test-result-row th,
  .sr-test-result-row td {
    /* override USWDS force-white */
    background: inherit;
  }

  .sr-test-result-row:hover {
    background: $theme-color-base-lightest;
  }

  .sr-test-result-row--removed {
    text-decoration: line-through;
  }

  .grid-row.grid-gap {
    .usa-form-group {
      padding-right: 0;
      margin-top: 0;
    }
  }

  .usa-date-picker__external-input {
    max-width: 9rem;
  }

  .usa-date-picker__button {
    max-width: 2.5em;
  }

  .usa-error-message {
    max-width: 11rem;
  }

  .person-search {
    .prime-search-container {
      margin-bottom: 0;
      min-width: 10rem;
      max-width: 13rem;

      .prime-search-input {
        margin-bottom: 0;

        .usa-input {
          margin-top: 0.5rem;
          margin-bottom: 0;
          height: 2.5rem;
        }

        .usa-button {
          margin-top: 0.5rem;
          height: 2.5rem;
        }
      }
    }

    .results-dropdown {
      position: absolute;
      top: 5.5rem;
      max-width: 30rem;
    }
  }
}

.sr-showing-results-on-page {
  margin-left: 2rem;
  color: #555;
  font-size: 50%;
  vertical-align: middle;
  font-weight: normal;
}

